# zerochain

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  dagger.json  docker-compose.yml  zerochain.sh
.dagger/: go.mod  main.go
container/: entrypoint.sh
crates/zerochain-broker/: Cargo.toml
crates/zerochain-broker/src/: lib.rs  memory.rs  nats.rs
crates/zerochain-cas/: Cargo.toml
crates/zerochain-cas/src/: backend.rs  cid.rs  error.rs  lib.rs  s3.rs  store.rs
crates/zerochain-core/: Cargo.toml
crates/zerochain-core/src/: context.rs  error.rs  frontmatter.rs  graph.rs  jj.rs  lib.rs  plan.rs  stage.rs  task.rs  template.rs  workflow.rs
crates/zerochain-core/src/lua_engine/: api.rs  config.rs  mod.rs  vm.rs
crates/zerochain-daemon/: Cargo.toml
crates/zerochain-daemon/src/: cli.rs  container.rs  error.rs  lib.rs  main.rs  mcp.rs  state.rs
crates/zerochain-daemon/tests/: cli_errors.rs  integration.rs  template_research_v2.rs
crates/zerochain-engine/: Cargo.toml
crates/zerochain-engine/benches/: workflow.rs
crates/zerochain-engine/examples/: profile_stage.rs
crates/zerochain-engine/src/: actor.rs  container.rs  error.rs  lib.rs  llm_driver.rs  registry.rs  state.rs  tool_driver.rs
crates/zerochain-engine/tests/: memory_tools.rs  tool_loop.rs  tool_stage.rs
crates/zerochain-error/: Cargo.toml
crates/zerochain-error/src/: lib.rs
crates/zerochain-fs/: Cargo.toml
crates/zerochain-fs/src/: atomic.rs  cow.rs  error.rs  lib.rs
crates/zerochain-llm/: Cargo.toml
crates/zerochain-llm/src/: error.rs  factory.rs  lib.rs  openai.rs  trait_.rs  types.rs
crates/zerochain-llm/src/profiles/: generic.rs  kimi_k2.rs  mod.rs
crates/zerochain-memory/: Cargo.toml
crates/zerochain-memory/src/: chunk.rs  error.rs  lib.rs  model.rs  similarity.rs  store.rs
crates/zerochain-server/: Cargo.toml
crates/zerochain-server/src/: auth.rs  jj.rs  lib.rs  main.rs  routes.rs  state.rs  subscriber.rs
crates/zerochain-server/src/handlers/: artifact.rs  mod.rs  prompt.rs  stage.rs  subvolume.rs  workflow.rs
crates/zerochain-server/tests/: integration.rs
crates/zerochain-tools/: Cargo.toml
crates/zerochain-tools/src/: fs_tool.rs  http_tool.rs  lib.rs  memory_tool.rs  registry.rs  shell_tool.rs  tool.rs
crates/zerochain-tools/tests/: fs_tool.rs  shell_tool.rs  tool_registry.rs
k8s/: configmap.yaml  ingress.yaml  job-example.yaml  kustomization.yaml  minio.yaml  namespace.yaml  nats.yaml  secret.yaml  zerochaind-service.yaml  zerochaind-statefulset.yaml
plugins/zerochain-opencode/: package.json  pnpm-lock.yaml  tsconfig.json
plugins/zerochain-opencode/src/: client.ts  index.ts  types.ts
templates/code-review/: template.toml
templates/code-review/00_spec/: CONTEXT.md
templates/code-review/01_review/: CONTEXT.md
templates/code-review/02_report/: CONTEXT.md
templates/docs/: template.toml
templates/docs/00_inventory/: CONTEXT.md
templates/docs/01_draft/: CONTEXT.md
templates/docs/02_review/: CONTEXT.md
templates/implement/: template.toml
templates/implement/00_spec/: CONTEXT.md
templates/implement/01_design/: CONTEXT.md
templates/implement/02_implement/: CONTEXT.md
templates/implement/03_verify/: CONTEXT.md
templates/refactor/: template.toml
templates/refactor/00_analyze/: CONTEXT.md
templates/refactor/01_plan/: CONTEXT.md
templates/refactor/02_execute/: CONTEXT.md
templates/refactor/03_verify/: CONTEXT.md
templates/research/: template.toml
templates/research-v2/: template.toml
templates/research-v2/00_ingest/: CONTEXT.md
templates/research-v2/01_summarize/: CONTEXT.md
templates/research-v2/02_critique/: CONTEXT.md
templates/research-v2/03_runbook/: CONTEXT.md
templates/research/00_question/: CONTEXT.md
templates/research/01_research/: CONTEXT.md
templates/research/02_synthesize/: CONTEXT.md
templates/security-audit/: template.toml
templates/security-audit/00_scope/: CONTEXT.md
templates/security-audit/01_scan/: CONTEXT.md
templates/security-audit/02_report/: CONTEXT.md
templates/test-gen/: template.toml
templates/test-gen/00_spec/: CONTEXT.md
templates/test-gen/01_generate/: CONTEXT.md
templates/test-gen/02_run/: CONTEXT.md
