[workspace]
resolver = "2"
members = [
    "crates/zerochain-broker",
    "crates/zerochain-cas",
    "crates/zerochain-core",
    "crates/zerochain-fs",
    "crates/zerochain-llm",
    "crates/zerochain-engine",
    "crates/zerochain-daemon",
    "crates/zerochain-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/zerochain-dev/zerochain"

[workspace.dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rmcp = { version = "1.5", features = ["server"] }
axum = "0.8"
schemars = "1.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
