[package]
name = "zerochain-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Message broker abstraction for cross-pod agent communication"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Optional NATS backend
async-nats = { version = "0.40", optional = true }
futures = { version = "0.3", optional = true }

[features]
default = []
nats = ["dep:async-nats", "dep:futures"]
