[package]
name = "zerochain-cas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed storage using Blake3 hashing"

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true

# Optional S3 backend
rust-s3 = { version = "0.35", optional = true }

[features]
default = []
s3 = ["dep:rust-s3"]

[dev-dependencies]
tempfile = "3.0"
