[package]
name = "zerochain-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core workflow model: stages, CONTEXT.md parsing, execution DAG"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
zerochain-fs = { path = "../zerochain-fs" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
regex = "1.0"
toml = "0.8"
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serde"] }

[dev-dependencies]
tempfile = "3.0"
