[package]
name = "zerochain-core"
version.workspace = true
edition.workspace = true
readme = "../../README.md"
keywords = ["zerochain", "ai", "workflow"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
description = "Core workflow model: stages, CONTEXT.md parsing, execution DAG"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml = "0.8"
mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serde"] }

[dev-dependencies]
tempfile = "3.0"
