[package]
name = "zerochain-daemon"
version.workspace = true
edition.workspace = true
description = "MCP server daemon for zerochain workflow execution"

[[bin]]
name = "zerochain"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
zerochain-core = { path = "../zerochain-core" }
zerochain-fs = { path = "../zerochain-fs" }
zerochain-llm = { path = "../zerochain-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
base64 = "0.22"

[dev-dependencies]
async-trait.workspace = true
tempfile = "3"
zerochain-cas = { path = "../zerochain-cas" }
zerochain-core = { path = "../zerochain-core" }
zerochain-fs = { path = "../zerochain-fs" }
zerochain-llm = { path = "../zerochain-llm" }
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
