[package]
name = "zerochain-engine"
version.workspace = true
edition.workspace = true
readme = "../../README.md"
keywords = ["zerochain", "ai", "workflow"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
description = "Core workflow engine for zerochain"

[lib]
path = "src/lib.rs"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
zerochain-core = { path = "../zerochain-core" }
zerochain-fs = { path = "../zerochain-fs" }
zerochain-llm = { path = "../zerochain-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
base64 = "0.22"
schemars.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
