[package]
name = "zerochain-engine"
version.workspace = true
edition.workspace = true
readme = "../../README.md"
keywords = ["zerochain", "ai", "workflow"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
description = "Core workflow engine for zerochain"

[lib]
path = "src/lib.rs"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
zerochain-core = { path = "../zerochain-core" }
zerochain-fs = { path = "../zerochain-fs" }
zerochain-llm = { path = "../zerochain-llm" }
zerochain-memory = { path = "../zerochain-memory" }
zerochain-tools = { path = "../zerochain-tools" }
zerochain-error = { path = "../zerochain-error" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
base64 = "0.22"
schemars.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
criterion = { version = "0.5", features = ["async_tokio"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[[bench]]
name = "workflow"
harness = false
