[package]
name = "zerochain-error"
version.workspace = true
edition.workspace = true
readme = "../../README.md"
keywords = ["zerochain", "ai", "workflow"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
description = "Shared error type for the zerochain workspace"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
