[package]
name = "zerochain-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM provider trait with OpenAI-compatible implementation"

[dependencies]
zerochain-cas = { path = "../zerochain-cas" }
zerochain-core = { path = "../zerochain-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
blake3.workspace = true


[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
