[package]
name = "zerochain-memory"
version.workspace = true
edition.workspace = true
readme = "../../README.md"
keywords = ["zerochain", "ai", "memory", "embeddings"]
categories = ["development-tools"]
license.workspace = true
repository.workspace = true
description = "Filesystem-native vector memory and semantic search for zerochain"

[dependencies]
zerochain-error = { path = "../zerochain-error" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
fastembed.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
tempfile = "3"
