[package]
name = "zerochain-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP daemon (zerochaind) for containerized workflow execution with jj audit trail"

[[bin]]
name = "zerochaind"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
default = []
s3 = ["zerochain-cas/s3"]

[dependencies]
zerochain-core = { path = "../zerochain-core" }
zerochain-daemon = { path = "../zerochain-daemon" }
zerochain-fs = { path = "../zerochain-fs" }
zerochain-llm = { path = "../zerochain-llm" }
zerochain-cas = { path = "../zerochain-cas" }
zerochain-broker = { path = "../zerochain-broker" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
http = "1"